name:           hw-int
version:        0.0.0.3
synopsis:       Additional facilities for Integers
description:    Additional faciltiies for Integers. Please see README.md
category:       Data
stability:      Experimental
homepage:       http://github.com/haskell-works/hw-int#readme
bug-reports:    https://github.com/haskell-works/hw-int/issues
author:         John Ky
maintainer:     newhoggy@gmail.com
copyright:      2016 John Ky
license:        BSD3
license-file:   LICENSE
tested-with:    GHC == 8.6.3, GHC == 8.4.4, GHC == 8.2.2
build-type:     Simple
cabal-version:  >= 1.10
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/haskell-works/hw-int

library
  exposed-modules:
    HaskellWorks.Data.Int
    HaskellWorks.Data.Int.Narrow
    HaskellWorks.Data.Int.Narrow.Narrow16
    HaskellWorks.Data.Int.Narrow.Narrow32
    HaskellWorks.Data.Int.Narrow.Narrow64
    HaskellWorks.Data.Int.Narrow.Narrow8
    HaskellWorks.Data.Int.Widen
    HaskellWorks.Data.Int.Widen.Widen16
    HaskellWorks.Data.Int.Widen.Widen32
    HaskellWorks.Data.Int.Widen.Widen64
    HaskellWorks.Data.Int.Widen.Widen8
  other-modules:    Paths_hw_int
  hs-source-dirs:   src
  ghc-options:      -Wall -O2
  build-depends:    base >=4 && <5
  default-language: Haskell2010

test-suite hw-int-test
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  other-modules:    Paths_hw_int
  hs-source-dirs:   test
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N -Wall
  build-tools:      hspec-discover
  build-depends:
      QuickCheck
    , base >=4 && <5
    , hedgehog
    , hspec
    , hw-int
    , hw-hspec-hedgehog
  default-language: Haskell2010
