cabal-version:        2.2

name:                 hw-int
version:              0.0.0.3
synopsis:             Additional facilities for Integers
description:          Additional faciltiies for Integers. Please see README.md
category:             Data
stability:            Experimental
homepage:             http://github.com/haskell-works/hw-int#readme
bug-reports:          https://github.com/haskell-works/hw-int/issues
author:               John Ky
maintainer:           newhoggy@gmail.com
copyright:            2016-2019 John Ky
license:              BSD-3-Clause
license-file:         LICENSE
tested-with:          GHC == 8.6.5, GHC == 8.4.4, GHC == 8.2.2
build-type:           Simple
extra-source-files:
  README.md

source-repository head
  type: git
  location: https://github.com/haskell-works/hw-int

common base                 { build-depends: base                 >= 4          && < 5      }

common QuickCheck           { build-depends: QuickCheck                                     }
common hedgehog             { build-depends: hedgehog                                       }
common hspec                { build-depends: hspec                                          }
common hw-hspec-hedgehog    { build-depends: hw-hspec-hedgehog                              }

common config
  default-language:     Haskell2010

library
  import:   base, config
  exposed-modules:
    HaskellWorks.Data.Int
    HaskellWorks.Data.Int.Narrow
    HaskellWorks.Data.Int.Narrow.Narrow16
    HaskellWorks.Data.Int.Narrow.Narrow32
    HaskellWorks.Data.Int.Narrow.Narrow64
    HaskellWorks.Data.Int.Narrow.Narrow8
    HaskellWorks.Data.Int.Widen
    HaskellWorks.Data.Int.Widen.Widen16
    HaskellWorks.Data.Int.Widen.Widen32
    HaskellWorks.Data.Int.Widen.Widen64
    HaskellWorks.Data.Int.Widen.Widen8
  other-modules:        Paths_hw_int
  autogen-modules:      Paths_hw_int
  hs-source-dirs:       src
  ghc-options:          -Wall -O2


test-suite hw-int-test
  import:   base, config
          , QuickCheck
          , hedgehog
          , hspec
          , hw-hspec-hedgehog
  type:                 exitcode-stdio-1.0
  main-is:              Spec.hs
  other-modules:        Paths_hw_int
  autogen-modules:      Paths_hw_int
  hs-source-dirs:       test
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N -Wall
  build-tools:          hspec-discover
  build-depends:        hw-int
